# grnkit

./: .gitignore  README  README.md
R/: DESCRIPTION
R/R/: genie3.R
python/: pyproject.toml
scripts/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  benchmarks.ipynb  benchmarks_dynotears.ipynb  boolODE.ipynb  nn_solution.ipynb  prepare_data.ipynb
